--- a/src/index.css
+++ b/src/index.css
@@ -3,72 +3,59 @@
 @tailwind utilities;
 
 :root {
+  @apply text-xl font-normal text-primary leading-6;
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+@layer base {
+  a {
+    @apply text-primary cursor-pointer relative inline-block;
   }
-  a:hover {
-    color: #747bff;
+
+  h1 {
+    @apply text-3xl;
   }
-  button {
-    background-color: #f9f9f9;
+
+  h2 {
+    @apply text-2xl;
+  }
+}
+
+@layer components {
+  .link::after {
+    transform: scale(1, 1);
+    content: '';
+    width: 100%;
+    height: 2px;
+    background: rgb(255, 255, 255);
+    position: absolute;
+    bottom: -7px;
+    left: 0;
+    transform: scaleX(0);
+    transform-origin: left bottom;
+    transition: transform 0.35s ease-out;
+  }
+
+  .link:hover::after {
+    transform: scaleX(1);
+    transform-origin: left bottom;
+  }
+  .btn {
+    @apply uppercase text-base text-secondary px-6 py-2;
+  }
+
+  .btn-primary {
+    @apply bg-primary;
+  }
+
+  .heading {
+    @apply flex justify-around my-5;
+  }
+
+  .card {
+    @apply md:px-16 pb-6 pt-7 rounded-lg shadow-md shadow-zinc-700 bg-zinc-800 grow max-w-screen-lg;
   }
 }
