--- a/src/components/organisms/Introduction.css
+++ b/src/components/organisms/Introduction.css
@@ -4,8 +4,8 @@
   background-position: top 0 left 50%;
   background-size: cover;
   margin: 20px;
-  min-height: 80vh;
-  min-width: 50vw;
+  min-height: 60vh;
+  max-width: 100%;
   box-shadow: inset 0px 0px 20px 20px #242426;
   border-radius: 20px;
 }
