--- a/src/components/atoms/Input.css
+++ b/src/components/atoms/Input.css
@@ -5,7 +5,7 @@ textarea {
 input,
 textarea {
   padding: 10px !important;
-  @apply w-full h-9 placeholder-transparent border-b-2 border-gray-300 focus:outline-none focus:border-primary;
+  @apply w-full placeholder-transparent border-b-2 border-gray-300 focus:outline-none focus:border-primary;
 }
 
 label {
