--- a/src/index.css
+++ b/src/index.css
@@ -69,6 +69,10 @@ html {
   }
 }
 
+.divider {
+  @apply block mx-10 border-primary flex grow self-center max-w-2xl justify-start;
+}
+
 .loader {
   width: 48px;
   height: 48px;
