--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,14 @@ html {
   scroll-behavior: smooth;
 }
 
+input,
+textarea,
+button,
+select,
+a {
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
 @layer base {
   a {
     @apply text-primary cursor-pointer relative inline-block;
@@ -70,7 +78,7 @@ html {
 }
 
 .divider {
-  @apply block mx-10 border-primary flex grow self-center max-w-2xl justify-start;
+  @apply mx-10 border-primary flex grow self-center max-w-2xl justify-start;
 }
 
 .loader {
