--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1,13 +1,13 @@
 :root {
-    @apply text-xl font-normal text-primary leading-6;
-    font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+  @apply text-xl font-normal text-primary leading-6;
+  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
 
-    color-scheme: light dark;
-    background-color: #242424;
+  color-scheme: light dark;
+  background-color: var(--color-react-gray);
 }
 
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 input,
@@ -16,31 +16,31 @@ button,
 select,
 img,
 a {
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 @utility scalable {
-    @apply cursor-pointer hover:scale-125 transition-all duration-150;
+  @apply cursor-pointer hover:scale-125 transition-all duration-150;
 }
 
 @layer base {
-    a {
-        @apply text-primary cursor-pointer relative inline-block;
-    }
+  a {
+    @apply text-primary cursor-pointer relative inline-block;
+  }
 
-    h1 {
-        @apply text-3xl;
-    }
+  h1 {
+    @apply text-3xl;
+  }
 
-    h2 {
-        @apply text-2xl;
-    }
+  h2 {
+    @apply text-2xl;
+  }
 
-    h3 {
-        @apply text-xl;
-    }
+  h3 {
+    @apply text-xl;
+  }
 
-    h4 {
-        @apply text-lg;
-    }
+  h4 {
+    @apply text-lg;
+  }
 }
