--- a/src/styles/components/index.css
+++ b/src/styles/components/index.css
@@ -1,49 +1,38 @@
-@import "./inputs.css";
+@import './inputs.css';
+@import './buttons.css';
 
 @layer components {
-    .link::after {
-        content: '';
-        width: 100%;
-        height: 2px;
-        background: rgb(255, 255, 255);
-        position: absolute;
-        bottom: -7px;
-        left: 0;
-        transform: scaleX(0);
-        transform-origin: left bottom;
-        transition: transform .35s ease-out;
-    }
+  .link::after {
+    content: '';
+    width: 100%;
+    height: 2px;
+    background: rgb(255, 255, 255);
+    position: absolute;
+    bottom: -7px;
+    left: 0;
+    transform: scaleX(0);
+    transform-origin: left bottom;
+    transition: transform 0.35s ease-out;
+  }
 
-    .link:hover::after {
-        transform: scaleX(1);
-        transform-origin: left bottom;
-    }
+  .link:hover::after {
+    transform: scaleX(1);
+    transform-origin: left bottom;
+  }
 
-    .btn {
-        @apply uppercase text-base text-react-gray px-6 py-2;
-    }
+  .heading {
+    @apply flex justify-around my-5;
+  }
 
-    .btn-primary {
-        @apply bg-primary active:bg-secondary;
-    }
+  .card {
+    @apply md:px-16 pb-6 pt-7 rounded-lg shadow-md shadow-zinc-700 bg-zinc-800 grow max-w-screen-lg;
+  }
 
-    .btn-rounded {
-        @apply rounded-full border p-1 size-8 text-sm flex justify-center items-center bg-stone-700 hover:bg-primary hover:text-stone-700 scalable;
-    }
+  .divider {
+    @apply mx-10 border-primary flex grow self-center max-w-2xl justify-start;
+  }
 
-    .heading {
-        @apply flex justify-around my-5;
-    }
-
-    .card {
-        @apply md:px-16 pb-6 pt-7 rounded-lg shadow-md shadow-zinc-700 bg-zinc-800 grow max-w-screen-lg;
-    }
-
-    .divider {
-        @apply mx-10 border-primary flex grow self-center max-w-2xl justify-start;
-    }
-
-    .loader {
-        @apply size-12 border border-primary border-b-transparent rounded-full shadow-md shadow-primary/3 animate-spin;
-    }
+  .loader {
+    @apply size-12 border border-primary border-b-transparent rounded-full shadow-md shadow-primary/3 animate-spin;
+  }
 }
