--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,6 +1,6 @@
-@import "tailwindcss";
-@import "./base.css";
-@import "./components";
+@import 'tailwindcss';
+@import './base.css';
+@import './components';
 
 @theme {
   --color-primary: #ffffffde;
@@ -8,15 +8,9 @@
   --color-react-gray: #242424;
 }
 
-/* intro */
 #me {
   background-image: url('/src/assets/me.jpeg');
   min-height: 60vh;
   box-shadow: inset 0 0 20px 20px #242426;
   @apply xl:mx-6 rounded-2xl max-w-full bg-no-repeat bg-cover bg-center;
 }
-
-.active {
-  @apply visible z-10;
-}
-
