--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,8 +9,8 @@
 }
 
 #me {
-  background-image: url('/src/assets/me.jpeg');
+  background-image: url('/src/assets/me.webp');
   min-height: 60vh;
-  box-shadow: inset 0 0 20px 20px #242426;
+  box-shadow: inset 0 0 20px 20px var(--color-react-gray);
   @apply xl:mx-6 rounded-2xl max-w-full bg-no-repeat bg-cover bg-center;
 }
